Issue #24 - Modified few things